--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -21,7 +21,7 @@ jobs:
         run: pip install flake8
 
       - name: Run flake8
-        run: --exclude=venv,.venv,env
+        run: flake8 --exclude=venv,.venv,env
 
   Tester:
     name: Unit Testing
